--- a/网页/snap/css/snap_head.css
+++ b/网页/snap/css/snap_head.css
@@ -8,6 +8,7 @@
     /*scroll	内容会被修剪，但是浏览器会显示滚动条以便查看其余的内容。*/
     /*auto	如果内容被修剪，则浏览器会显示滚动条以便查看其余的内容。*/
     /*inherit	规定应该从父元素继承 overflow 属性的值。*/
+    background:#e8e8e8;
     background-size: 100%;
 }
 
@@ -24,3 +25,83 @@
     top: 0;
     overflow: hidden;
 }
+
+.header dl {
+    width: 1000px;
+    height: 80px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.header dl dt {
+    float: left;
+    width: 148px;
+    height: 79px;
+}
+
+.header dl dt a {
+    display: inline-block;
+    width: 148px;
+    height: 79px;
+    margin-top: 10px;
+    background: url("../images/snapicon.png") no-repeat 0 -100px;
+}
+
+.header dl dd {
+    float: right;
+    width: 630px;
+    height: 100%;
+    position: relative;
+}
+
+.header dl dd ul {
+    width: 100%;
+    height: 85px;
+    cursor: pointer;
+    background: url("../images/nav_bg.png") no-repeat;
+}
+
+.header dl dd ul li {
+    float: left;
+    width: 125px;
+    height: 42px;
+    margin-top: 22px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.header dl dd ul li a {
+    display: inline-block;
+    width: 125px;
+    height: 42px;
+    line-height: 42px;
+    font-size: 18px;
+    color: #f9ede6;
+}
+
+.footer {
+    width: 100%;
+    height: 42px;
+    position: absolute;
+    bottom: 0;
+    background-color: #bababa;
+    overflow: hidden;
+}
+
+.footer p {
+    line-height: 42px;
+    text-align: center;
+    color: #dbdbdb;
+    font-size: 14px;
+}
+
+
+
+
+
+
+
+
+
+
+
