#ionic #snap# UI

--- a/ionic/snap/src/pages/about/about.scss
+++ b/ionic/snap/src/pages/about/about.scss
@@ -1,3 +1,30 @@
 page-about {
 
+  #div_content{
+    //width: 90%;
+    //margin-left: auto;
+    //margin-right: auto;
+  }
+  #logo_div{
+    text-align: center;//水平
+    margin-top: 50px;
+    //vertical-align: center;
+  }
+
+  #version_div{
+    text-align: center;//水平
+    margin-top: 20px;
+  }
+  #site_address_div{
+    text-align: center;//水平
+    margin-top: 20px;
+  }
+
+  .list{
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+
+
 }
